# rxn-chemutils

./: .buildinfo  .bumpversion.cfg  .gitignore  .travis.yml  README.html  README.md  api.html  conda.yml  genindex.html  index.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test_requirements.txt
.github/workflows/: docs.yaml  pypi.yaml  tests.yaml
_modules/: index.html
_modules/rxn/chemutils/: conversion.html  exceptions.html  extended_reaction_smiles.html  miscellaneous.html  multicomponent_smiles.html  rdkit_utils.html  reaction_combiner.html  reaction_equation.html  reaction_smiles.html  smiles_augmenter.html  smiles_randomization.html  smiles_standardization.html  tokenization.html  utils.html
_modules/rxn/chemutils/rdf/: property_parser.html  rdf_parser.html  rdf_reaction.html  reaction_properties.html  reaction_smiles_extractor.html
_sources/: README.md.txt
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.md
rxn_chemutils/: __init__.py  chemical_reaction.py  conversion.py  depict.py  exceptions.py  extended_reaction_smiles.py  miscellaneous.py  molecule_list.py  multicomponent_smiles.py  rdkit_utils.py  reaction_equation.py  reaction_smiles.py  reaction_smiles_converter.py  reaction_smiles_utils.py  rxn_worker_utils.py  smiles_randomization.py  tokenization.py  utils.py
rxn_chemutils/scripts/: __init__.py  canonicalize.py  detokenize.py  tokenize.py
rxn_chemutils/tests/: test_chemical_reaction.py  test_conversion.py  test_extended_reaction_smiles.py  test_miscellaneous.py  test_molecule_list.py  test_multicomponent_smiles.py  test_multismiles.py  test_rdkit_utils.py  test_reaction_equation.py  test_reaction_smiles.py  test_reaction_smiles_converter.py  test_reaction_smiles_utils.py  test_rxn_worker_utils.py  test_smiles_randomization.py  test_tokenization.py  test_utils.py
scripts/: chemutils-canonicalize  chemutils-depictready  chemutils-detokenize  chemutils-remove-mapping  chemutils-tokenize
src/rxn/chemutils/: __init__.py  conversion.py  depict.py  exceptions.py  extended_reaction_smiles.py  miscellaneous.py  multicomponent_smiles.py  rdkit_utils.py  reaction_combiner.py  reaction_equation.py  reaction_smiles.py  rxn_worker_utils.py  smiles_augmenter.py  smiles_randomization.py  smiles_standardization.py  tokenization.py  utils.py
src/rxn/chemutils/rdf/: __init__.py  property_parser.py  rdf_parser.py  rdf_reaction.py  reaction_properties.py  reaction_smiles_extractor.py
src/rxn/chemutils/scripts/: canonicalize.py  canonicalize_file.py  combine_precursors_and_products.py  combine_reaction.py  detokenize.py  rdf_to_smiles.py  tokenize.py
src/rxn_chemutils/: tokenization.py
src/rxn_chemutils/scripts/: __init__.py  canonicalize.py  detokenize.py
tests/: test_conversion.py  test_extended_reaction_smiles.py  test_miscellaneous.py  test_multicomponent_smiles.py  test_rdkit_utils.py  test_reaction_combiner.py  test_reaction_equation.py  test_reaction_smiles.py  test_rxn_worker_utils.py  test_smiles_augmenter.py  test_smiles_randomization.py  test_smiles_standardization.py  test_tokenization.py  test_utils.py
tests/rdf/: sample.rdf  sample_with_unknown_structure.rdf  test_property_parser.py  test_rdf_parser.py  test_rdf_reaction.py  test_reaction_properties.py  test_reaction_smiles_extractor.py
