[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "pytest.*",
    "rdkit.*",
    "setuptools.*",
]
ignore_missing_imports = true

[tool.yapf]
based_on_style = "pep8"
blank_line_before_nested_class_or_def = true
column_limit = 99
dedent_closing_brackets = true
indent_dictionary_value = true
