[metadata]
name = rxn_chemutils
version = attr: rxn.chemutils.__version__
description = Chemistry-related utilities
author = IBM RXN team
author_email = rxn4chemistry@zurich.ibm.com
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >= 3.6
zip_safe = False
include_package_data = True
scripts =
    scripts/chemutils-canonicalize
    scripts/chemutils-depictready
    scripts/chemutils-detokenize
    scripts/chemutils-remove-mapping
    scripts/chemutils-tokenize
install_requires =
    attrs>=21.2.0
    click>=7.0
    rxn-utilities==0.8.13.alpha0

[options.packages.find]
where = src

[options.package_data]
rxn.chemutils =
    py.typed

[options.extras_require]
dev =
    black>=22.3.0
    bump2version>=1.0.1
    flake8>=3.7.9
    isort>=5.9.3
    mypy>=0.910
    pytest>=5.3.4

[flake8]
extend-ignore = E203, E501
