[metadata]
name = rxn-chem-utils
version = attr: rxn.chemutils.__version__
description = Chemistry-related utilities
author = IBM RXN team
author_email = rxn4chemistry@zurich.ibm.com
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >= 3.6
zip_safe = False
include_package_data = True
install_requires =
    attrs>=21.2.0
    click>=7.0
    rxn-utils>=0.9.3

[options.packages.find]
where = src

[options.package_data]
rxn.chemutils =
    py.typed

[options.extras_require]
dev =
    black>=22.3.0
    bump2version>=1.0.1
    flake8>=3.7.9
    isort>=5.9.3
    mypy>=0.910
    pytest>=5.3.4
    types-setuptools>=57.4.17

[options.entry_points]
console_scripts =
    rxn-canonicalize = rxn.chemutils.scripts.canonicalize:main
    rxn-detokenize = rxn.chemutils.scripts.detokenize:main
    rxn-tokenize = rxn.chemutils.scripts.tokenize:main

[flake8]
extend-ignore = E203, E501

